--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <DOCTYPE! html>
 <html>
-<head>
-</head>
-<body>
-</body>
-</html>
+	<head>
+	</head>
+	<body>
+	<h1> This is my website!
+	</h1>
+	</body>
+	</html>
