added a paragraph and included link to mixpanel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 	</head>
 	<body>
-	<h1> This is my website!
-	</h1>
+	<h1> This is my website!</h1>
+	<p>This is my quick site for learning more about GitHub.</p>
+
+	<a href="http://www.mixpanel.com">mixpanel's site</a>
 	</body>
 	</html>
