--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<p>This is my quick site for learning more about GitHub.</p>
 
 	<a href="http://www.mixpanel.com">mixpanel's site</a>
+	
+	<button id=button>Click Me please</button>
 	</body>
 	</html>
