moved head up to front

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<script src=./javascript.js>
 	<script>
-	total_clicks = click_counter(0);
+	total_clicks = click_counter(0);	
 	</script>
 	</head>
 	<body>
@@ -12,7 +12,7 @@
 
 	<a href="http://www.mixpanel.com">mixpanel's site</a>
 	
-	<button id=button onclick="total_clicks()">
+	<button id="button" onclick="total_clicks">
 		Click Me please</button>
 
 	</body>
