fixed ending script tag for javascript source file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
 	<head>
-	<script src=./javascript.js>
+	<script src=./javascript.js></script>
 	<script>
 	total_clicks = click_counter(0);	
 	</script>
@@ -12,8 +12,8 @@
 
 	<a href="http://www.mixpanel.com">mixpanel's site</a>
 	
-	<button id="button" onclick="total_clicks">
+	<button id="button" onclick="total_clicks()">
 		Click Me please</button>
 
 	</body>
-	</html>
+</html>
