--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 	<script src=./javascript.js></script>
 	<script>
-	total_clicks = click_counter(0);	
+	total_clicks = click_counter(0);
 	</script>
 	</head>
 	<body>
 	<h1> This is my website!</h1>
 	<p>This is my quick site for learning more about GitHub.</p>
-
+  <p>rob was here</p>
 	<a href="http://www.mixpanel.com">mixpanel's site</a>
-	
+
 	<button id="button" onclick="total_clicks()">
 		Click Me please</button>
 
