added my own paragraph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<body>
 	<h1> This is my website!</h1>
 	<p>This is my quick site for learning more about GitHub.</p>
-  <p>rob was here</p>
+  	<p>rob was here</p>
+	<p> blake was here </p>
 	<a href="http://www.mixpanel.com">mixpanel's site</a>
 
 	<button id="button" onclick="total_clicks()">
